# cpath

./: .gitignore  CMakeLists.txt  README.md  cpath.h  example.c  example.cpp  path.h
.github/workflows/: main.yml
tests/: cbench.h  cpp_tests.cpp  obsidian.h  obsidian_extras.h  tests.c  tests_force_conv.c
tests/benchmarks/: benchmark_recursive  benchmark_recursive.c  benchmark_recursive.py  benchmark_recursive.sh  benchmark_stack  benchmark_stack.c
tests/benchmarks/recursive/: benchmark_recursive  benchmark_recursive.c  benchmark_recursive.cpp  benchmark_recursive.sh  benchmark_recursive_cf  benchmark_recursive_cf.c  benchmark_recursive_cpp  benchmark_recursive_tinydir  benchmark_recursive_tinydir.c  benchmark_stack  benchmark_stack.c  benchmark_stack.cpp  benchmark_stack_cpp
tests/others/: README.md  cute_files.h  tinydir.h
